# ZXCC

./: .gitignore  0_SETUP.sh  1_CONFIGURE.sh  2_MKDEB.sh  MAKE.sh  MKCONFMAKE.sh  MKDEB.sh  MKDEBINSTALL.sh  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  zxcc.doc  zxcc.html
CPM.COM/: MK_Makefile_am.sh  Makefile.am  Makefile.in
PLI80/: Makefile.am  Makefile.in
cpmio/: Makefile.in  config.h.in  configure
cpmio/check/: Makefile.in
cpmio/include/: Makefile.in
cpmio/lib/: Makefile.in
cpmredir/: Makefile.in  config.h.in  configure
cpmredir/include/: Makefile.in
cpmredir/lib/: Makefile.in
