noinst_DATA = *.com

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(libdir)/cpm/bin80
	$(mkinstalldirs) $(DESTDIR)$(libdir)/cpm/lib80
	$(mkinstalldirs) $(DESTDIR)$(libdir)/cpm/include80
	$(INSTALL_DATA) $(srcdir)/dump.com $(DESTDIR)$(libdir)/cpm/bin80/dump.com
	$(INSTALL_DATA) $(srcdir)/gencpm3.com $(DESTDIR)$(libdir)/cpm/bin80/gencpm3.com
	$(INSTALL_DATA) $(srcdir)/hexcom.com $(DESTDIR)$(libdir)/cpm/bin80/hexcom.com
	$(INSTALL_DATA) $(srcdir)/l80.com $(DESTDIR)$(libdir)/cpm/bin80/l80.com
	$(INSTALL_DATA) $(srcdir)/link.com $(DESTDIR)$(libdir)/cpm/bin80/link.com
	$(INSTALL_DATA) $(srcdir)/load.com $(DESTDIR)$(libdir)/cpm/bin80/load.com
	$(INSTALL_DATA) $(srcdir)/m80.com $(DESTDIR)$(libdir)/cpm/bin80/m80.com
	$(INSTALL_DATA) $(srcdir)/mac.com $(DESTDIR)$(libdir)/cpm/bin80/mac.com
	$(INSTALL_DATA) $(srcdir)/mload.com $(DESTDIR)$(libdir)/cpm/bin80/mload.com
	$(INSTALL_DATA) $(srcdir)/pip.com $(DESTDIR)$(libdir)/cpm/bin80/pip.com
	$(INSTALL_DATA) $(srcdir)/rmac.com $(DESTDIR)$(libdir)/cpm/bin80/rmac.com
	$(INSTALL_DATA) $(srcdir)/slrnk.com $(DESTDIR)$(libdir)/cpm/bin80/slrnk.com
	$(INSTALL_DATA) $(srcdir)/z80asm.com $(DESTDIR)$(libdir)/cpm/bin80/z80asm.com
	$(INSTALL_DATA) $(srcdir)/z80dis.com $(DESTDIR)$(libdir)/cpm/bin80/z80dis.com
	$(INSTALL_DATA) $(srcdir)/zsm4.com $(DESTDIR)$(libdir)/cpm/bin80/zsm4.com

uninstall-local:
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/dump.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/gencpm3.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/hexcom.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/l80.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/link.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/load.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/m80.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/mac.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/mload.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/pip.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/rmac.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/slrnk.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/z80asm.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/z80dis.com
	$(RM) $(DESTDIR)$(libdir)/cpm/bin80/zsm4.com

